Refactor ConvertString: update URL conversion method to use URI for improved error handling